# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py  wrong_answer_output.py
brain_games/scripts/: brain_even.py  brain_games.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
demo/: demo.cast  demo2.cast  demo3.cast  demo4.cast  demo5.cast
